AssignmentGit/force-app/main/default/objects/DeveloperD__c/DeveloperD__c.object-meta.xml
<CustomObject>
    <label>DeveloperD</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DevelopersD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>