AssignmentGit/force-app/main/default/objects/DeveloperD__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>