AssignmentGit/force-app/main/default/objects/DeveloperD__c/fields/Projectps__c.field-meta.xml
<CustomField>
    <fullName>Projectps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projectps</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>DevelopersD12</relationshipLabel>
    <relationshipName>DevelopersD</relationshipName>
    <type>Lookup</type>
</CustomField>