AssignmentGit/force-app/main/default/objects/DeveloperD__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <label>Reporting Manager</label>
    <referenceTo>ManagerG__c</referenceTo>
    <relationshipLabel>DevelopersD</relationshipLabel>
    <relationshipName>DevelopersD</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>