AssignmentGit/force-app/main/default/objects/DeveloperD__c/fields/Reportinng_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reportinng_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reportinng Manager</label>
    <referenceTo>ManagerG__c</referenceTo>
    <relationshipLabel>DevelopersD (Reportinng Manager)1</relationshipLabel>
    <relationshipName>DevelopersD1</relationshipName>
    <type>Lookup</type>
</CustomField>